Frameworks: Add favorite contact Quick Settings Tile
Patch Set 3: Memory Use Optimization + Allow multiple Fav Contact instances

Patch Set 4 and 5: Some variables clean up

Patch Set 6: Fixed a copy/paste typo in GPS Tile and cleaned white spaces

Conflicts:

	packages/SystemUI/src/com/android/systemui/quicksettings/FavoriteContactTile.java
	packages/SystemUI/src/com/android/systemui/statusbar/phone/QuickSettingsController.java

Change-Id: I590879fffde25794f540740ab1d06f6b3468c37a

--- a/packages/SystemUI/AndroidManifest.xml
+++ b/packages/SystemUI/AndroidManifest.xml
@@ -242,5 +242,10 @@
                 <category android:name="android.intent.category.DESK_DOCK" />
             </intent-filter>
         </activity>
+
+        <!-- started from Favorite Contact Tile -->
+        <activity
+            android:name=".quicksettings.ContactPickerActivity"/>
+
     </application>
 </manifest>
