[1/2] Base: Nav ring Tasker integration
User can now set a custom Tasker action to nav ring target

Change-Id: Icb2d0c8a51491beee9e13d81fee097321ae3f12a

--- a/packages/SystemUI/AndroidManifest.xml
+++ b/packages/SystemUI/AndroidManifest.xml
@@ -138,6 +138,9 @@
     <!-- LiveDisplay -->
     <uses-permission android:name="android.permission.HARDWARE_ABSTRACTION_ACCESS" />
 
+    <!-- Tasker integration -->
+    <uses-permission android:name="net.dinglisch.android.tasker.PERMISSION_RUN_TASKS" />
+
     <application
         android:name=".SystemUIApplication"
         android:persistent="true"
